--- a/.github/workflows/_develop.yml
+++ b/.github/workflows/_develop.yml
@@ -1,4 +1,4 @@
-name: versioning, tests, build, image-scans, code-scans, linting and ui-tests
+name: versioning, tests, build, image-scans, code-scans, linting, ui-tests and notify
 
 on:
   push:
@@ -28,44 +28,10 @@ jobs:
     needs: build
     secrets: inherit
 
-  codeql-scan:
-    runs-on: ubuntu-latest
-
-    needs: [backend-trivy-scan, backend-grype-scan, frontend-trivy-scan, frontend-grype-scan]
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Set up CodeQL
-        uses: github/codeql-action/init@v3
-        with:
-          languages: 'javascript,typescript'
-          build-mode: 'none'
-
-      - name: Finalize CodeQL Database and Upload Results
-        uses: github/codeql-action/analyze@v3
-        with:
-          output: './results'
-          upload: 'always'
-          upload-database: 'true'
-          wait-for-processing: 'true'
-
-  gitleaks-scan:
-    runs-on: ubuntu-latest
-
-    needs: [backend-trivy-scan, backend-grype-scan, frontend-trivy-scan, frontend-grype-scan]
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Analyze with Gitleaks
-        uses: gitleaks/gitleaks-action@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  code-scans:
+    uses: ./.github/workflows/code-scans.yml
+    needs: build
+    secrets: inherit
 
   frontend-eslint-scan:
     runs-on: ubuntu-latest
