--- a/.github/workflows/_develop.yml
+++ b/.github/workflows/_develop.yml
@@ -30,46 +30,13 @@ jobs:
 
   code-scans:
     uses: ./.github/workflows/code-scans.yml
-    needs: build
+    needs: image-scans
     secrets: inherit
 
-  frontend-eslint-scan:
-    runs-on: ubuntu-latest
-
-    needs: [codeql-scan, gitleaks-scan]
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Install Frontend Dependencies
-        run: |
-          cd frontend
-          npm install
-
-      - name: Run ESLint
-        run: |
-          cd frontend
-          npx eslint .
-
-  backend-eslint-scan:
-    runs-on: ubuntu-latest
-
-    needs: [codeql-scan, gitleaks-scan]
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Install Backend Dependencies
-        run: |
-          cd backend
-          npm install
-
-      - name: Run ESLint
-        run: |
-          cd backend
-          npx eslint src
+  linting2:
+    uses: ./.github/workflows/linting.yml
+    needs: code-scans
+    secrets: inherit
 
   frontend-e2e-tests:
     timeout-minutes: 60
