do-10 extract ui-tests from workflow

--- a/.github/workflows/_develop.yml
+++ b/.github/workflows/_develop.yml
@@ -1,4 +1,4 @@
-name: versioning, tests, build, image-scans, code-scans, linting, ui-tests and notify
+name: versioning, tests, build, image-scans, code-scans, linting, ui-tests and notifying
 
 on:
   push:
@@ -11,223 +11,42 @@ permissions:
 
 jobs:
   versioning:
-    uses: ./.github/workflows/versioning.yml
+    uses: ./.github/workflows/stage1_versioning.yml
 
   tests:
-    uses: ./.github/workflows/tests.yml
+    uses: ./.github/workflows/stage2_tests.yml
     needs: versioning
     secrets: inherit
 
   build:
-    uses: ./.github/workflows/build.yml
+    uses: ./.github/workflows/stage3_build.yml
     needs: tests
     secrets: inherit
 
   image-scans:
-    uses: ./.github/workflows/image-scans.yml
+    uses: ./.github/workflows/stage4_image-scans.yml
     needs: build
     secrets: inherit
 
   code-scans:
-    uses: ./.github/workflows/code-scans.yml
+    uses: ./.github/workflows/stage5_code-scans.yml
     needs: image-scans
     secrets: inherit
 
   linting2:
-    uses: ./.github/workflows/linting.yml
+    uses: ./.github/workflows/stage6_linting.yml
     needs: code-scans
     secrets: inherit
 
-  frontend-e2e-tests:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
-
-    needs: frontend-eslint-scan
-
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
-
-      - name: Install dependencies
-        run: |
-         cd frontend
-         npm ci
-
-      - name: Install Playwright Browsers
-        run: |
-         cd frontend
-         npx playwright install --with-deps
-
-      - name: Install doctl
-        uses: digitalocean/action-doctl@v2
-        with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-
-      - name: Log in to DigitalOcean Container Registry with short-lived credentials
-        run: doctl registry login --expiry-seconds 1200
-
-      - name: Download PACKAGE_VERSION_FRONTEND Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: PACKAGE_VERSION_FRONTEND
-          path: .
-
-      - name: Read PACKAGE_VERSION_FRONTEND
-        id: read_package_version
-        run: |
-          PACKAGE_VERSION_FRONTEND=$(cat PACKAGE_VERSION_FRONTEND)
-          echo "PACKAGE_VERSION_FRONTEND=$PACKAGE_VERSION_FRONTEND" >> $GITHUB_ENV
-
-      - name: Pull image from registry
-        run: docker pull registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION_FRONTEND }}
-
-      - name: Run image from registry
-        run: docker run -d -p 5173:80 registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION_FRONTEND }}
-
-      - name: Run Playwright tests
-        run: |
-         cd frontend
-         npx playwright test ui-tests/e2e-tests
-
-      - uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: playwright-report
-          path: frontend/ui-tests/e2e-tests
-          retention-days: 30
-
-  frontend-gui-tests:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
-
-    needs: frontend-eslint-scan
-
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
-
-      - name: Install dependencies
-        run: |
-          cd frontend
-          npm ci
-
-      - name: Install Playwright Browsers
-        run: |
-          cd frontend
-          npx playwright install --with-deps
-
-      - name: Install doctl
-        uses: digitalocean/action-doctl@v2
-        with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-
-      - name: Log in to DigitalOcean Container Registry with short-lived credentials
-        run: doctl registry login --expiry-seconds 1200
-
-      - name: Download PACKAGE_VERSION_FRONTEND Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: PACKAGE_VERSION_FRONTEND
-          path: .
-
-      - name: Read PACKAGE_VERSION_FRONTEND
-        id: read_package_version
-        run: |
-          PACKAGE_VERSION_FRONTEND=$(cat PACKAGE_VERSION_FRONTEND)
-          echo "PACKAGE_VERSION_FRONTEND=$PACKAGE_VERSION_FRONTEND" >> $GITHUB_ENV
-
-      - name: Pull image from registry
-        run: docker pull registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION_FRONTEND }}
-
-      - name: Run image from registry
-        run: docker run -d -p 5173:80 registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION_FRONTEND }}
-
-      - name: Run Playwright tests
-        run: |
-          cd frontend
-          npx playwright test ui-tests/gui-tests
-
-      - name: Create Artifact for Playwright report
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: playwright-report-integration
-          path: frontend/ui-tests/gui-tests
-          retention-days: 30
-
-  create-new-vrts:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
-
-    needs: frontend-gui-tests
-    if: needs.frontend-gui-tests.result == 'failure'
-
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
-
-      - name: Install dependencies
-        run: |
-          cd frontend
-          npm ci
-
-      - name: Install Playwright Browsers
-        run: |
-          cd frontend
-          npx playwright install --with-deps
-
-      - name: Install doctl
-        uses: digitalocean/action-doctl@v2
-        with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-
-      - name: Log in to DigitalOcean Container Registry with short-lived credentials
-        run: doctl registry login --expiry-seconds 1200
-
-      - name: Download PACKAGE_VERSION_FRONTEND Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: PACKAGE_VERSION_FRONTEND
-          path: .
-
-      - name: Read PACKAGE_VERSION_FRONTEND
-        id: read_package_version
-        run: |
-          PACKAGE_VERSION_FRONTEND=$(cat PACKAGE_VERSION_FRONTEND)
-          echo "PACKAGE_VERSION_FRONTEND=$PACKAGE_VERSION_FRONTEND" >> $GITHUB_ENV
-
-      - name: Pull image from registry
-        run: docker pull registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION_FRONTEND }}
-
-      - name: Run image from registry
-        run: docker run -d -p 5173:80 registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION_FRONTEND }}
-
-      - name: Run Playwright tests
-        run: |
-          cd frontend
-          npx playwright test ui-tests/gui-tests --update-snapshots
-
-      - name: Create Artifact for new vrt screenshots
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: new-vrts
-          path: frontend/ui-tests/gui-tests
-          retention-days: 30
+  ui-tests:
+    uses: ./.github/workflows/stage7_ui-tests.yml
+    needs: linting2
+    secrets: inherit
 
   send-notification-success:
     runs-on: ubuntu-latest
 
-    needs:
-      - frontend-gui-tests
-      - frontend-e2e-tests
-    if: needs.frontend-gui-tests.result == 'success' && needs.frontend-e2e-tests.result == 'success'
+    needs: ui-tests
 
     steps:
       - name: Send Email via SendGrid
@@ -252,39 +71,25 @@ jobs:
   send-notification-failure:
     runs-on: ubuntu-latest
 
-    #    needs:
-    #      - frontend-gui-tests
-    #      - frontend-e2e-tests
-    needs:
-      - tests
-    if: always() && needs.tests.result == 'failure'
-#    if: ${{ always() && (needs.tests.jobs.frontend-unit.outputs.result == 'failure' || needs.tests.jobs.backend-unit.outputs.result == 'failure' || needs.tests.jobs.backend-integration.outputs.result == 'failure') }}
-
-    #    if: needs.frontend-unit.result == 'success'
+    needs: ui-tests
+    if: always() && needs.ui-tests.result == 'failure'
 
     steps:
-      - name: Debug Output of needs.tests.outputs.result
-        run: |
-          echo "Der Status von tests: ${{ needs.tests.jobs.frontend-unit.outputs.result }}"
-          echo "Der Status von tests: ${{ needs.tests.frontend-unit.outputs.result }}"
-          echo "Der Status von tests: ${{ needs.tests.frontend-unit.result }}"
-          echo "Der Status von tests: ${{ needs.tests.result }}"
+      - name: Send Email via SendGrid
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.sendgrid.net
+          server_port: 587
+          username: apikey
+          password: ${{ secrets.SENDGRID_API_KEY }}
+          from: ${{ secrets.EMAIL_FROM }}
+          to: ${{ secrets.EMAIL_TO }}
+          subject: "CI/CD develop - Failure - philippkraatz.com - Notification"
+          body: |
+            Pipeline abgebrochen für Repository **${{ github.repository }}**! 🎉
 
-#      - name: Send Email via SendGrid
-#        uses: dawidd6/action-send-mail@v3
-#        with:
-#          server_address: smtp.sendgrid.net
-#          server_port: 587
-#          username: apikey
-#          password: ${{ secrets.SENDGRID_API_KEY }}
-#          from: ${{ secrets.EMAIL_FROM }}
-#          to: ${{ secrets.EMAIL_TO }}
-#          subject: "CI/CD develop - Failure - philippkraatz.com - Notification"
-#          body: |
-#            Pipeline abgebrochen für Repository **${{ github.repository }}**! 🎉
-#
-#            Commit: ${{ github.event.head_commit.message }}
-#            Autor: ${{ github.event.head_commit.author.name }}
-#
-#            Repository: github.com/kephalosk/personal-finance-app
-#            Action Logs: github.com/kephalosk/personal-finance-app/actions
+            Commit: ${{ github.event.head_commit.message }}
+            Autor: ${{ github.event.head_commit.author.name }}
+
+            Repository: github.com/kephalosk/personal-finance-app
+            Action Logs: github.com/kephalosk/personal-finance-app/actions
