--- a/.github/workflows/_master.yml
+++ b/.github/workflows/_master.yml
@@ -1,4 +1,4 @@
-name: versioning, tests, build, image-scans, code-scans, linting, ui-tests, deploy and notifying
+name: versioning, tests, build, image-scans, code-scans, linting, ui-tests, deploying and notifying
 
 on:
   push:
@@ -13,132 +13,38 @@ jobs:
   versioning:
     uses: ./.github/workflows/stage1_versioning.yml
 
-  tests:
-    uses: ./.github/workflows/stage2_tests.yml
+  testing:
+    uses: ./.github/workflows/stage2_testing.yml
     needs: versioning
     secrets: inherit
 
-  build:
-    uses: ./.github/workflows/stage3_build.yml
-    needs: tests
+  building:
+    uses: ./.github/workflows/stage3_building.yml
+    needs: testing
     secrets: inherit
 
-  image-scans:
-    uses: ./.github/workflows/stage4_image-scans.yml
-    needs: build
+  image-analyzing:
+    uses: ./.github/workflows/stage4_image-analyzing.yml
+    needs: building
     secrets: inherit
 
-  code-scans:
-    uses: ./.github/workflows/stage5_code-scans.yml
-    needs: image-scans
+  code-analyzing:
+    uses: ./.github/workflows/stage5_code-analyzing.yml
+    needs: image-analyzing
     secrets: inherit
 
   linting:
     uses: ./.github/workflows/stage6_linting.yml
-    needs: code-scans
+    needs: code-analyzing
     secrets: inherit
 
-  ui-tests:
-    uses: ./.github/workflows/stage7_ui-tests.yml
+  ui-testing:
+    uses: ./.github/workflows/stage7_ui-testing.yml
     needs: linting
     secrets: inherit
+
+  deploying:
+    uses: ./.github/workflows/stage8_deploying.yml
+    needs: ui-testing
+    secrets: inherit
           
-  frontend-deploy:
-    runs-on: ubuntu-latest
-    
-    needs: [frontend-e2e-tests, frontend-gui-tests, backend-eslint-scan]
-
-    steps:
-      - name: Checkout master
-        uses: actions/checkout@v4
-  
-      - name: Install doctl
-        uses: digitalocean/action-doctl@v2
-        with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-  
-      - name: Log in to DigitalOcean Container Registry with short-lived credentials
-        run: doctl registry login --expiry-seconds 1200
-  
-      - name: Renew cluster’s certificate
-        run: doctl kubernetes cluster kubeconfig save ${{ secrets.CLUSTER_ID }}
-
-      - name: Download PACKAGE_VERSION_FRONTEND Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: PACKAGE_VERSION_FRONTEND
-          path: .
-  
-      - name: Read PACKAGE_VERSION_FRONTEND
-        id: read_package_version
-        run: |
-          PACKAGE_VERSION_FRONTEND=$(cat PACKAGE_VERSION_FRONTEND)
-          echo "PACKAGE_VERSION_FRONTEND=$PACKAGE_VERSION_FRONTEND" >> $GITHUB_ENV
-
-      - name: Deploy to DigitalOcean Kubernetes
-        run: |
-          helm upgrade personal-finance-app ./deployment/helm/personal-finance-app --namespace default --set serviceVersion=${{ env.PACKAGE_VERSION_FRONTEND }} --wait
-
-      - name: restart Pods
-        run: kubectl -n default rollout restart deploy
-  
-      - name: Verify deployment
-        run: kubectl rollout status deployment/personal-finance-app
-
-      - name: Set CURRENT_PROD_FRONTEND_SERVICE_VERSION in GitHub Repository Variables
-        run: |
-          curl -X PATCH \
-            -H "Authorization: Bearer ${{ secrets.VARIABLE_GITHUB_TOKEN }}" \
-            -H "Accept: application/vnd.github+json" \
-            -d '{"name": "CURRENT_PROD_FRONTEND_SERVICE_VERSION", "value": "${{ env.PACKAGE_VERSION_FRONTEND }}"}' \
-            https://api.github.com/repos/${{ github.repository }}/actions/variables/CURRENT_PROD_FRONTEND_SERVICE_VERSION
-
-  backend-deploy:
-    runs-on: ubuntu-latest
-
-    needs: [frontend-e2e-tests, frontend-gui-tests, backend-eslint-scan]
-
-    steps:
-      - name: Checkout master
-        uses: actions/checkout@v4
-
-      - name: Install doctl
-        uses: digitalocean/action-doctl@v2
-        with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-
-      - name: Log in to DigitalOcean Container Registry with short-lived credentials
-        run: doctl registry login --expiry-seconds 1200
-
-      - name: Renew cluster’s certificate
-        run: doctl kubernetes cluster kubeconfig save ${{ secrets.CLUSTER_ID }}
-
-      - name: Download PACKAGE_VERSION_BACKEND Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: PACKAGE_VERSION_BACKEND
-          path: .
-
-      - name: Read PACKAGE_VERSION_BACKEND
-        id: read_package_version
-        run: |
-          PACKAGE_VERSION_BACKEND=$(cat PACKAGE_VERSION_BACKEND)
-          echo "PACKAGE_VERSION_BACKEND=$PACKAGE_VERSION_BACKEND" >> $GITHUB_ENV
-
-      - name: Deploy to DigitalOcean Kubernetes
-        run: |
-          helm upgrade nestjs-backend ./deployment/helm/nestjs-backend --namespace default --set serviceVersion=${{ env.PACKAGE_VERSION_BACKEND }} --wait
-
-      - name: restart Pods
-        run: kubectl -n default rollout restart deploy
-
-      - name: Verify deployment
-        run: kubectl rollout status deployment/nestjs-backend
-
-      - name: Set CURRENT_PROD_BACKEND_SERVICE_VERSION in GitHub Repository Variables
-        run: |
-          curl -X PATCH \
-            -H "Authorization: Bearer ${{ secrets.VARIABLE_GITHUB_TOKEN }}" \
-            -H "Accept: application/vnd.github+json" \
-            -d '{"name": "CURRENT_PROD_BACKEND_SERVICE_VERSION", "value": "${{ env.PACKAGE_VERSION_BACKEND }}"}' \
-            https://api.github.com/repos/${{ github.repository }}/actions/variables/CURRENT_PROD_BACKEND_SERVICE_VERSION
