--- a/.github/workflows/stage9_notifying.yml
+++ b/.github/workflows/stage9_notifying.yml
@@ -2,5 +2,61 @@ name: notifying
 
 on:
   workflow_call:
+    inputs:
+      hasFailed:
+        description: 'previous job failed'
+        required: true
+        type: boolean
+      isMaster:
+        description: 'master branch identifier'
+        required: true
+        type: boolean
 
 jobs:
+  send-notification-success:
+    runs-on: ubuntu-latest
+    if: ${{ inputs.hasFailed == false }}
+
+    steps:
+      - name: Send Email via SendGrid
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.sendgrid.net
+          server_port: 587
+          username: apikey
+          password: ${{ secrets.SENDGRID_API_KEY }}
+          from: ${{ secrets.EMAIL_FROM }}
+          to: ${{ secrets.EMAIL_TO }}
+          subject: "CI/CD ${{ inputs.isMaster == true && 'master' || 'develop' }} - Success - philippkraatz.com - Notification"
+          body: |
+            Pipeline erfolgreich durchgelaufen für Repository **${{ github.repository }}**! 🎉
+
+            Commit: ${{ github.event.head_commit.message }}
+            Autor: ${{ github.event.head_commit.author.name }}
+
+            Repository: github.com/kephalosk/personal-finance-app
+            Action Logs: github.com/kephalosk/personal-finance-app/actions
+
+  send-notification-failure:
+    runs-on: ubuntu-latest
+    if: ${{ inputs.hasFailed == true }}
+
+    steps:
+      - name: Send Email via SendGrid
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.sendgrid.net
+          server_port: 587
+          username: apikey
+          password: ${{ secrets.SENDGRID_API_KEY }}
+          from: ${{ secrets.EMAIL_FROM }}
+          to: ${{ secrets.EMAIL_TO }}
+          subject: "CI/CD ${{ inputs.isMaster == true && 'master' || 'develop' }} - Failure - philippkraatz.com - Notification"
+          body: |
+            Pipeline abgebrochen für Repository **${{ github.repository }}**! 🎉
+
+            Commit: ${{ github.event.head_commit.message }}
+            Autor: ${{ github.event.head_commit.author.name }}
+
+            Repository: github.com/kephalosk/personal-finance-app
+            Action Logs: github.com/kephalosk/personal-finance-app/actions
