do-10 update documentation

--- a/.github/workflows/stage6_ui-testing.yml
+++ b/.github/workflows/stage6_ui-testing.yml
@@ -121,7 +121,7 @@ jobs:
           path: frontend/ui-tests/gui-tests
           retention-days: 30
 
-  create-new-vrts:
+  create-vrts:
     timeout-minutes: 60
     runs-on: ubuntu-latest
 
