do10 test notifying job failure

--- a/.github/workflows/_develop.yml
+++ b/.github/workflows/_develop.yml
@@ -16,7 +16,6 @@ jobs:
   testing:
     uses: ./.github/workflows/stage2_testing.yml
     needs: versioning
-    secrets: inherit
 
   building:
     uses: ./.github/workflows/stage3_building.yml
@@ -40,8 +39,9 @@ jobs:
 
   notifying:
     uses: ./.github/workflows/stage8_notifying.yml
-    needs: versioning
+    needs: testing
     secrets: inherit
+    if: always()
     with:
-      hasFailed: ${{ needs.versioning.result == 'failure' }}
+      hasFailed: ${{ needs.testing.result == 'failure' }}
       isMaster: false
